winter-test/src/test/mods/io.winterframework.test.error.moduleG/io/winterframework/test/error/moduleG/BeanA.java
package io.winterframework.test.error.moduleG;

import io.winterframework.core.annotation.Bean;

@Bean
public class BeanA {
	
	public BeanA() {
	}
	
}
